--- a/WebApplication1/Views/cuotas/agregarCuenta.cshtml
+++ b/WebApplication1/Views/cuotas/agregarCuenta.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="index.html" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item active">Agregar cuenta</li>
                         </ul>
                     </div>
@@ -63,7 +63,7 @@
                                 <div class="form-group row">
                                     <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la cuenta</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" 
+                                        <input maxlength="30" class="form-control" type="text" value="" 
                                                name="account_name" required  data-toggle="tooltip"
                                                title="Nombre de la cuenta"
                                                placeholder="Cuenta personal" id="example-email-input">
@@ -74,7 +74,7 @@
                                 <div class="form-group row">
                                     <label for="example-name1-input" class="col-sm-3 col-form-label">Número de cuenta</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" 
+                                        <input maxlength="20" class="form-control soloNumero" type="text" value="" 
                                                name="account_number" required
                                                data-toggle="tooltip" title="Número de cuenta"
                                                placeholder="XXX-XXXXXXXX-X-XX" id="example-name1-input">
@@ -85,7 +85,7 @@
                                 <div class="form-group row">
                                     <label for="example-name1-input" class="col-sm-3 col-form-label">Nombre del banco</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="bank_name" required 
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="bank_name" required 
                                                placeholder="Nombre del banco" id="example-name1-input" 
                                                data-toggle="tooltip" title="Nombre del banco"
                                                />
@@ -96,7 +96,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname1-input" class="col-sm-3 col-form-label">Número de ruta</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" 
+                                        <input maxlength="20" class="form-control soloNumero" type="text" value="" 
                                                name="route_number" required  data-toggle="tooltip" title="Número de ruta"
                                                placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input">
                                         <small class="form-text text-muted">Número de ruta</small>
@@ -116,7 +116,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-email-input" class="col-sm-6 col-form-label">Nombre</label>
                                         <div class="col-sm-6">
-                                            <input class="form-control" type="text" value="" name="first_name" required
+                                            <input maxlength="30" class="form-control soloTexto" type="text" value="" name="first_name" required
                                                    placeholder="Nombre en la tarjeta" id="example-email-input">
                                         </div>
                                     </div>
@@ -124,7 +124,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-name1-input" class="col-sm-3 col-form-label">Apellido</label>
                                         <div class="col-sm-9">
-                                            <input class="form-control" type="text" value="" required name="surname"
+                                            <input maxlength="20" class="form-control soloTexto" type="text" value="" required name="surname"
                                                    placeholder="Apellido en la tarjeta" id="example-name1-input">
                                         </div>
                                     </div>
@@ -133,7 +133,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname1-input" class="col-sm-3 col-form-label">Número de tarjeta</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="card_number" required
+                                        <input maxlength="20" class="form-control soloNumero" type="text" value="" name="card_number" required
                                                placeholder="XXXX-XXXX-XXXX-XXXX-XXXX" id="example-lastname1-input">
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-name1-input" class="col-sm-3 col-form-label">CCV</label>
                                         <div class="col-sm-9">
-                                            <input class="form-control" type="text" value="" name="ccv"
+                                            <input maxlength="3" required class="form-control soloNumero" type="text" value="" name="ccv"
                                                    placeholder="CCV" id="example-name1-input">
                                         </div>
                                     </div>
@@ -190,7 +190,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="address"
+                                        <input maxlength="40" required class="form-control" type="text" value="" name="address"
                                                placeholder="Dirección" id="example-lastname1-input">
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-email-input" class="col-sm-6 col-form-label">País</label>
                                         <div class="col-sm-6">
-                                            <input class="form-control" type="text" value="" name="country"
+                                            <input maxlength="15" class="form-control soloTexto" type="text" value="" name="country"
                                                    placeholder="País" id="example-email-input">
                                         </div>
                                     </div>
@@ -206,7 +206,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-name1-input" class="col-sm-3 col-form-label">Estado</label>
                                         <div class="col-sm-9">
-                                            <input class="form-control" type="text" value="" name="state"
+                                            <input maxlength="20" class="form-control soloTexto" type="text" value="" name="state"
                                                    placeholder="Estado" id="example-name1-input">
                                         </div>
                                     </div>
@@ -215,7 +215,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-email-input" class="col-sm-6 col-form-label">Ciudad</label>
                                         <div class="col-sm-6">
-                                            <input class="form-control" type="text" value="" name="city"
+                                            <input maxlength="20" class="form-control soloTexto" type="text" value="" name="city"
                                                    placeholder="Ciudad" id="example-email-input">
                                         </div>
                                     </div>
@@ -223,7 +223,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-name1-input" class="col-sm-3 col-form-label">Código postal</label>
                                         <div class="col-sm-9">
-                                            <input class="form-control" type="text" value="" name="postal_code"
+                                            <input maxlength="15" class="form-control" type="text" value="" name="postal_code"
                                                    placeholder="Código postal" id="example-name1-input">
                                         </div>
                                     </div>
@@ -232,7 +232,7 @@
                                     <div class="form-group row col-md-6 mb-2">
                                         <label for="example-email-input" class="col-sm-6 col-form-label">Teléfono</label>
                                         <div class="col-sm-6">
-                                            <input class="form-control" type="text" value="" name="phone"
+                                            <input maxlength="15" class="form-control soloNumero" type="text" value="" name="phone"
                                                    placeholder="Teléfono" id="example-email-input">
                                         </div>
                                     </div>
