--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -218,7 +218,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                         }
                                         else
                                         {
-                                    <a href="@Url.Action("agrlistadoCuentasegar", "cuotas")">Listado de cuentas de banco y CC</a>
+                                    <a href="@Url.Action("listadoCuentas", "cuotas")">Listado de cuentas de banco y CC</a>
                                         }
                                     </li>
                                 </ul>
@@ -229,7 +229,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <ul class="list-unstyled">
                                     <li><a href="@Url.Action("balance", "cuotas")">Balance pendiente</a></li>
                                     <li><a href="@Url.Action("estado", "cuotas")">Estados de cuenta</a></li>
-                                    <li><a href="@Url.Action("listadoCuentas", "cuotas")">Agregar Cuenta de banco o CC</a></li>
+                                    <li><a href="@Url.Action("listadoCuentas", "cuotas")">Listado de cuentas de banco y CC</a></li>
                                 </ul>
                             }
                         </li>
@@ -824,7 +824,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
             var url = "@Url.Action("DeleteBank", "cuotas")";
 
             var errUrl = "@Url.Action("listadoCuentas", "cuotas", new { Error = "No se puede eliminar esta cuenta porque posee pagos pendientes"  })";
-            $.ajax({
+            var respuesta = confirm("¿Estás seguro que deseas eliminar este elemento?");
+            if (respuesta == true) {
+                $.ajax({
                 url: url,
                 type: "post",
                 data: formData,
@@ -841,6 +843,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 processData: false,
                 contentType: false
             });
+            } else {
+                return false;
+            }            
         }
     </script>
 
